fix(react-vite): remove the highlight color for link on mobile

--- a/demo/react-vite/src/shared/css/base.less
+++ b/demo/react-vite/src/shared/css/base.less
@@ -19,6 +19,11 @@ code {
     monospace;
 }
 
+a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  /* transparent is for some old android browser */
+  -webkit-tap-highlight-color: transparent;
+}
 .main_box_shadow {
   box-shadow: 0 2px 5px 0 @white-3;
 }
